syntax = "proto3";

package kyve.bundles.v1beta1;

import "gogoproto/gogo.proto";
import "kyve/bundles/v1beta1/tx.proto";

option go_package = "github.com/KYVENetwork/chain/x/bundles/types";

// BundleStatus ...
enum BundleStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  // BUNDLE_STATUS_UNSPECIFIED ...
  BUNDLE_STATUS_UNSPECIFIED = 0;
  // BUNDLE_STATUS_VALID ...
  BUNDLE_STATUS_VALID = 1;
  // BUNDLE_STATUS_INVALID ...
  BUNDLE_STATUS_INVALID = 2;
  // BUNDLE_STATUS_NO_FUNDS ...
  BUNDLE_STATUS_NO_FUNDS = 3;
  // BUNDLE_STATUS_NO_QUORUM ...
  BUNDLE_STATUS_NO_QUORUM = 4;
}

// EventBundleVote is an event emitted when a protocol node votes on a bundle.
message EventBundleVote {
  // pool_id is the unique ID of the pool.
  uint64 pool_id = 1;
  // staker is the account staker of the protocol node.
  string staker = 2;
  // storage_id is the unique ID of the bundle.
  string storage_id = 3;
  // vote is the vote type of the protocol node.
  VoteType vote = 4;
}

// EventBundleFinalised is an event emitted when a bundle is finalised.
message EventBundleFinalised {
  // pool_id is the unique ID of the pool.
  uint64 pool_id = 1;
  // storage_id ...
  string storage_id = 2;
  // byte_size ...
  uint64 byte_size = 3;
  // uploader ...
  string uploader = 4;
  // next_uploader ...
  string next_uploader = 5;
  // reward ...
  uint64 reward = 6;
  // valid ...
  uint64 valid = 7;
  // invalid ...
  uint64 invalid = 8;
  // from_height ...
  uint64 from_height = 9;
  // to_height ...
  uint64 to_height = 10;
  // status ...
  BundleStatus status = 11;
  // to_key ...
  string to_key = 12;
  // to_value ...
  string to_value = 13;
  // id ...
  uint64 id = 14;
  // bundle_hash ...
  string bundle_hash = 15;
  // abstain ...
  uint64 abstain = 16;
  // total ...
  uint64 total = 17;
}